CE migration: dump and upload ()
Depends on https://github.com/neo-technology/neo4j-cloud/pull/59008

Adds initial support in the Fleet Management plugin for “migration to
Aura” workflows by dumping a local database, uploading it to Aura via
push-to-cloud, and reporting step status back to the Fleet Management
API (part of NOM-295).

**Changes:**
- Introduce `MigrationToAuraService` plus new upstream endpoints and
message models for requesting an import token and updating migration
step status.
- Extend plugin configuration handling to accept and publish pending
“migrations to Aura” from the server response.
- Add required dependencies (push-to-cloud + picocli) and update
docs/license listings and CLI surface expectations.

**Testing**
It is easier to test with with the UPX branch
https://github.com/neo4j/upx/pull/10177 by using the "Migrate to Aura"
button (see below) on the instance card, because there an existing Aura
instance can be selected as migration target. On `trunk`, the metrics
data of the CE deployment must be propagated first and that happens
after about 10 minutes (we report every tenth cycle of metrics reporting
and there seems to be a bug where the first report does not have effect
or not enough for the Prometheus query used)

<img width="1509" height="476" alt="image"
src="https://github.com/user-attachments/assets/57c4bcdd-b79b-405a-b0c2-e2218764c518"
/>